--- a/index.html
+++ b/index.html
@@ -51,15 +51,12 @@
     <!-- Seccion Hero -->
     <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/mifoto.jpg" alt="Foto de Jane Doe">
-        <h1>Hola,soy Carmen Mtz </h1>
-        <!--<h2>Desarrollo sitios y hago proyectos de UI/UX.</h2>-->
+        <img  class="hero-imagen-desarrollador rounded-circle" src="imagenes/yo2.jpg" alt="Foto de Jane Doe">
+        <h1>Maria del Carmen Martinez Salas</h1>
+        <!--<h2>Front end | UI UX</h2>-->
 
         <!--Animación con JavaScript-->
         <h2 class="text mb-4" id="typewriter"></h2>
-      </div>
-      <div class="hero-inferior">
-        <img class="barner img-fluid" src="imagenes/barner.png" alt="">
       </div>
     </section>
 
@@ -95,6 +92,7 @@
                 </div>
               </div>
             </div>
+            <label>JavaScript</label>
           </div>
           <!-- Proyecto 2 -->
           <div class="col-12 col-md-6 col-lg-4">
@@ -112,6 +110,7 @@
                 </div>
               </div>
             </div>
+            <label>HTML CSS</label>
           </div>
           <!-- Proyecto 3 -->
           <div class="col-12 col-md-6 col-lg-4">
@@ -129,6 +128,7 @@
                 </div>
               </div>
             </div>
+            <label>React JS</label>
           </div>
           <!-- Proyecto 4 -->
           <div class="col-12 col-md-6 col-lg-4">
@@ -146,6 +146,7 @@
                 </div>
               </div>
             </div>
+            <label>UI UX</label>
           </div>
           <!-- Proyecto 5 -->
           <div class="col-12 col-md-6 col-lg-4">
@@ -163,6 +164,7 @@
                 </div>
               </div>
             </div>
+            <label>Figma</label>
           </div>
           <!-- Proyecto 6 -->
           <div class="col-12 col-md-6 col-lg-4">
@@ -180,7 +182,67 @@
                 </div>
               </div>
             </div>
+            <br>
+            <label>UI UX</label>
           </div>
+
+          <!-- Proyecto 7 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="imagenes/reactjsCO.png" alt="Proyecto 1">
+              <div class="overlay">
+                <p>Proyecto 7</p>
+                <div class="iconos-contenedor">
+                  <a href="https://github.com/Hellocarmenn/proyectoREACTCO" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="https://proyectoreactco.netlify.app/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <label>React JS</label>
+          </div>
+          <!-- Proyecto 8 
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src=""" alt="Proyecto 1">
+              <div class="overlay">
+                <p>Proyecto 8</p>
+                <div class="iconos-contenedor">
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <label>Angular</label>
+          </div>
+
+        -->
+          <!-- Proyecto 9 
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="" alt="Proyecto 1">
+              <div class="overlay">
+                <p>Proyecto 9</p>
+                <div class="iconos-contenedor">
+                  <a href="https://github.com/Hellocarmenn/sitiowebconReact" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="#" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        -->
+
         </div>
       </div>
       <a href="https://github.com/Hellocarmenn" target="_blank" rel="noopener noreferrer">
@@ -233,7 +295,7 @@
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">Creado por Maria Del Carmen MArtinez Salas (2024) &#169;</div>
+      <div class="derechos-de-autor">Creado por Maria Del Carmen Martinez Salas (2024) &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
